--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ spring:
     url: jdbc:mysql://localhost/tree-authority?useSSL=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 123456
-
+  redis:
+    host: localhost
+    port: 6379
